# chat-app

./: .gitignore
back-end/: alembic.ini  database_queries.sql  database_structure.sql  main.py  pyproject.toml
back-end/alembic/: env.py
back-end/alembic/versions/: 2025_04_14_2153-cd70e94074fb_init_database.py  2025_04_16_1040-7575b5eedbd5_add_tbl_blacklisted_tokens_refresh_.py  2025_04_16_1056-bec4ce741585_added_reference_to_black_token_in_user_.py
back-end/src/: config.py
back-end/src/database/: connection.py  models.py
back-end/src/repository/: users.py
back-end/src/routes/: auth.py
back-end/src/schemas/: users.py
back-end/src/services/: auth.py
